# pnmhide

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  hide.c  hide.h  image.c  image.h  pnmhide.c
test/: CMakeLists.txt  check.sh  cover.pnm
